--- a/manifest.json
+++ b/manifest.json
@@ -57,8 +57,8 @@
         /* 小程序特有相关 */
         "appid" : "wx324324f06094a58b",
         "setting" : {
-            "urlCheck" : true,
-            "minified" : true,
+            "urlCheck" : false,
+            "minified" : false,
             "es6" : true,
             "postcss" : true
         },
