--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name" : "Mini Mars",
+    "name" : "MINIMARS亲子会所",
     "appid" : "__UNI__991921B",
     "description" : "",
-    "versionName" : "1.0.0",
+    "versionName" : "0.9.0",
     "versionCode" : "100",
     "transformPx" : false,
     "app-plus" : {
