--- a/manifest.json
+++ b/manifest.json
@@ -67,6 +67,7 @@
             "scope.userLocation" : {
                 "desc" : "你的位置信息将用于寻找附近的门店"
             }
-        }
+        },
+        "navigateToMiniProgramAppIdList": ["wx0b9a05ad7c33f761"]
     }
 }
