--- a/package.json
+++ b/package.json
@@ -12,11 +12,5 @@
     "vuex": "^3.1.3",
     "vuex-pathify": "^1.2.2"
   },
-  "devDependencies": {
-    "@dcloudio/types": "^0.4.4",
-    "@types/moment": "^2.13.0",
-    "@types/typescript": "^2.0.0",
-    "@types/uni-app": "^1.4.1",
-    "typescript": "^3.8.3"
-  }
+  "devDependencies": {}
 }
