partner card; puma weapp navigate

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name" : "MINIMARS+",
     "appid" : "__UNI__991921B",
     "description" : "",
-    "versionName" : "1.2.4",
+    "versionName" : "1.2.5",
     "versionCode" : "100",
     "transformPx" : false,
     "app-plus" : {
@@ -68,6 +68,6 @@
                 "desc" : "你的位置信息将用于寻找附近的门店"
             }
         },
-        "navigateToMiniProgramAppIdList" : [ "wx0b9a05ad7c33f761" ]
+        "navigateToMiniProgramAppIdList" : [ "wx0b9a05ad7c33f761", "wxdbbb41de843597ee" ]
     }
 }
